Fixed FA bug with icons not showing in Chrome or FFox
The font-weight of the pseudo-elements was being set and this broke the
icons

Moved the nav bar right a little it was being cut off by the scrollbars

Compiled sass

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -21,9 +21,8 @@ html, body {
   height: 100%;
   font-size: 16px; }
 
-*, *:before, *:after {
+* {
   box-sizing: inherit;
-  font-weight: normal;
   margin: 0px;
   padding: 0px; }
 
@@ -249,7 +248,8 @@ nav {
       padding: 0em;
       flex-direction: row;
       justify-content: flex-end;
-      align-items: center; }
+      align-items: center;
+      padding-right: 2em; }
       nav a {
         padding: 0em; }
       nav a:not(:first-child) {
