--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -8,9 +8,8 @@ html, body {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+* {
   box-sizing: inherit;
-  font-weight: normal;
   margin: 0px;
   padding: 0px;
 }
